Sintaxe de Template e Instância VueJS Trabalhando Juntos

--- a/dom/template-v3.html
+++ b/dom/template-v3.html
@@ -13,7 +13,7 @@
         },
         methods: {
             saudacao:function(){
-                return 'Boa semana!'
+                return this.titulo
             },
         },
 })
