Binding de Atributos

--- a/dom/template-v4.html
+++ b/dom/template-v4.html
@@ -3,7 +3,7 @@
 <div id="app">
    <p>{{ titulo }}</p> 
    <p>{{ saudacao() }}</p>
-   <a href="">Google</a>
+   <a v-bind:href="link">Google</a>
 </div>
 
 <script>
