Evitando Re-Renderização com v-once

--- a/dom/template-v5.html
+++ b/dom/template-v5.html
@@ -1,7 +1,7 @@
 <script src="../vue/vue.js"></script>
 
 <div id="app">
-   <p>{{ titulo }}</p> 
+   <p v-once>{{ titulo }}</p> 
    <p>{{ saudacao() }}</p>
    <a v-bind:href="link">Google</a>
 </div>
@@ -16,7 +16,10 @@
         
         methods: {
             saudacao:function(){
-                return this.titulo
+
+               this.titulo="Bom dia"
+
+               return this.titulo
             },
         },
 })
